[tool.poetry]
name = "xpring"
version = "0.4.2"
description = ""
authors = ["John Freeman <jfreeman@ripple.com>"]
documentation = "https://xpring-py.readthedocs.io/"
repository = "https://github.com/thejohnfreeman/xpring-py/"
readme = "README.rst"
license = "ISC"
packages = [{ include = "xpring" }]
include = ["xpring/proto/v1/*.py*", "xpring/definitions.json"]

[tool.poetry.dependencies]
python = ">=3.6"
sphinx = {version = "^1.8",optional = true}
sphinx-autobuild = {version = "^0.7.1",optional = true}
sphinx_rtd_theme = {version = "^0.4.3",optional = true}
toml = {version = "^0.10.0",optional = true}
grpcio = "^1.24"
pynacl = "^1.3"
typing_extensions = "^3.7"
dataclasses = "^0.6.0"
fastecdsa = {version = "^2.0",optional = true}
ecdsa = "^0.15.0"
protobuf = "^3.0"

[tool.poetry.extras]
py = ["fastecdsa"]
docs = ["sphinx", "sphinx-autobuild", "sphinx_rtd_theme", "toml"]

[tool.poetry.dev-dependencies]
cryptography = "^2.8"
invoke = "^1.3"
mypy = "^0.730.0"
pydocstyle = "^4.0"
pylint = "^2.4"
pytest = "^5.2"
pytest-cov = "^2.7"
yapf = "^0.28.0"
grpcio-tools = "^1.24"
grpc-stubs = "^1.24"
mypy-protobuf = "^1.16"
tox = "^3.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
